# aoc

./: .env  .gitignore  README.md  pyproject.toml
aoc/utils/: __init__.py  grid.py  utils.py
aoc/y2015/: day02.py  day03.py  day04.py  day1.py
aoc/y2019/: day01.py  day03.py  day04.py  day05.py  day2.py  day3.py  day6.py
aoc/y2020/: day01.py  day02.py  day03.py  day04.py  day06.py  day07.py  day09.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day2.py  day3.py  day4.py  day5.py  day6.py  day8.py
aoc/y2021/: day01.py  day04.py  day05.py  day06.py  day09.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day17.py  day2.py  day3.py  day4.py  day5.py  day7.py  day8.py  day9.py
aoc/y2022/: day02.py  day03.py  day04.py  day06.py  day07.py  day08.py  day1.py  day10.py  day11.py  day12.py  day13.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
aoc/y2023/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day08.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day3.py  day5.py  day6.py  day7.py  day8.py  day9.py
aoc/y2024/: day01.py  day02.py  day03.py  day06.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
aoc/y2025/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py
tests/y2020/: test_day1.py  test_day2.py  test_day3.py  test_day4.py
tests/y2021/: test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  (+2 more)
(+15 files in other folders)
