[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Marcus Risanger <69350948+MarcusRisanger@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
advent-of-code-data = "^2.0.1"
jupyter = "^1.0.0"
numpy = "^1.23.5"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.18.3"
black = "^22.10.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
