[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Marcus Risanger <69350948+MarcusRisanger@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.12"
advent-of-code-data = "^2.0.2"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"
ipykernel = "^6.18.3"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
